--- a/project/index.html
+++ b/project/index.html
@@ -50,7 +50,7 @@
 					With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
 					<a href="https://www.topgear.com/car-news/new-york-motor-show/america-your-nissan-gt-r-track-edition" style="color: white">_</a>
 					<br/>
-					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="nissan-gtr/index.html">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
+					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="nissan-gtr/nissangtr.html">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
 				</div>
 			</div>
 			<div class="w3-col" style="visibility: hidden; width: 3%">
