--- a/project/nissan-gtr/nissangtr.html
+++ b/project/nissan-gtr/nissangtr.html
@@ -26,30 +26,23 @@
 	</div> -->
 	<!-- Navbar -->
 	<div class="w3-top">
-		<div class="w3-bar w3-white w3-card-2" style="font-family: 'Titillium Web', sans-serif;">
-			<a class="w3-bar-item w3-btn w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-			<a href="../index.html" class="w3-bar-item w3-btn w3-padding-large">AUTO.HU</a>
-			<a href="#band" class="w3-bar-item w3-btn w3-padding-large w3-hide-small">BAND</a>
-			<a href="#tour" class="w3-bar-item w3-btn w3-padding-large w3-hide-small">TOUR</a>
-			<a href="#contact" class="w3-bar-item w3-btn w3-padding-large w3-hide-small">CONTACT</a>
-			<div class="w3-dropdown-hover w3-hide-small">
-				<button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
-				<div class="w3-dropdown-content w3-bar-block w3-card-4">
-				<a href="#" class="w3-bar-item w3-button">Merchandise</a>
-				<a href="#" class="w3-bar-item w3-button">Extras</a>
-				<a href="#" class="w3-bar-item w3-button">Media</a>
-				</div>
+		<div class="w3-bar w3-white w3-top w3-xlarge" style="font-family: 'Titillium Web', sans-serif; padding-top: 2px">
+			<a class="w3-bar-item w3-btn w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+			<div class="w3-right" style="font-size: 29px">
+				<div class="w3-bar-item w3-btn bd-t"><a href="https://vk.com/Kurzdor"><i class="fa fa-vk" aria-hidden="true"></a></i></div>
+				<div class="w3-bar-item w3-btn bd-t"><a href="https://vk.com/Kurzdor"><i class="fa fa-facebook" aria-hidden="true"></a></i></div>
+				<div class="w3-bar-item w3-btn bd-t"><a href="https://vk.com/Kurzdor"><i class="fa fa-google-plus" aria-hidden="true"></a></i></div>
 			</div>
-			<a href="javascript:void(0)" class="w3-padding-large w3-btn w3-hide-small w3-right"><i class="fa fa-search"></i></a>
+			<a href="../index.html" class="w3-bar-item w3-btn w3-padding-large">AUTO.HU</a>
+			<a href="../index.html" class="w3-bar-item w3-btn w3-padding-large w3-hide-small bd-t">HOME</a>
+			<a href="../contacts/index.html" class="w3-bar-item w3-btn w3-padding-large w3-hide-small bd-t">CONTACTS</a>
 		</div>
 	</div>
 
 	<!-- Navbar on small screens -->
-	<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+	<div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px; font-family: 'Titillium Web', sans-serif;">
 		<a href="#band" class="w3-bar-item w3-button w3-padding-large">BAND</a>
 		<a href="#tour" class="w3-bar-item w3-button w3-padding-large">TOUR</a>
-		<a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
-		<a href="#" class="w3-bar-item w3-button w3-padding-large">MERCH</a>
 	</div>
 
 	<div class="w3-image w3-center">
@@ -143,6 +136,7 @@
 	    modal.style.display = "none";
 	  }
 	}
-</script>	
+</script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" _defer></script>	
 </body>
 </html>
