--- a/project/index.html
+++ b/project/index.html
@@ -5,6 +5,7 @@
 	<meta name="theme-color" content="#000000">
 	<title>Home - auto.hu</title>
 	<link rel="icon" href="favicon.png">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -30,7 +31,7 @@
 	<div class="w3-jumbo w3-center" style="font-family: 'Titillium Web', sans-serif; text-shadow:1px 2px 0 #3d3d3d">
 		BLOG ABOUT CARS
 	</div>
-	<div class="w3-center"><a href="#main"><img src="img/Arrow-down.svg" alt="" style="width: 3%; height: 3%;margin-bottom: 3%"></a></div>
+	<div id="mover" class="w3-center"><a href="#main"><img src="img/Arrow-down.svg" alt="" style="width: 3%; height: 3%;margin-bottom: 3%"></a></div>
 	<div id="main"></div>
 	<div class="w3-row" style="margin-top: 5%;">
 		<div class="w3-col l1" style="visibility: hidden;">
@@ -210,5 +211,12 @@
 		</div>
 		</div>
 	</div>
+	<script>
+	$("#mover").click(function() {
+    $('html, body').animate({
+        scrollTop: $("#main").offset().top
+    	}, 1500);
+	});
+	</script>
 </body>
 </html>
