--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	
 	<div class="w3-row" style="padding-top: 5%; padding-bottom: 13.75%">
 		<div class="w3-col l3 w3-hide-small" style="visibility: hidden;">_</div>
-		<div class="w3-col l3 w3-btn w3-text-white w3-animate-top" style="font-size: 2.5em; font-family: 'Roboto Condensed', sans-serif;"><a href="main/index.html" style="text-decoration: none;">Move to Main</a></div>
-		<div class="w3-col l3 w3-btn w3-text-white w3-animate-top" style="font-size: 2.5em; font-family: 'Roboto Condensed', sans-serif;"><a href="project/index.html" style="text-decoration: none;">Move to Project</a></div>
+		<div class="w3-col l3 w3-btn w3-text-white w3-animate-top" style="font-size: 2.5em; font-family: 'Roboto Condensed', sans-serif;"><a href="main/" style="text-decoration: none;">Move to Main</a></div>
+		<div class="w3-col l3 w3-btn w3-text-white w3-animate-top" style="font-size: 2.5em; font-family: 'Roboto Condensed', sans-serif;"><a href="project/" style="text-decoration: none;">Move to Project</a></div>
 		<div class="w3-col l3 w3-hide-small" style="visibility: hidden;">_</div>
 	</div>
 	<div class="w3-container w3-center w3-text-white" style="font-family: 'Roboto Condensed', sans-serif; font-size: 1.1em;"><a href="https://www.w3schools.com/w3css/default.asp" style="text-decoration: none;">Powered by w3.css</a></div>
