--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div class="w3-container w3-center w3-text-white" style="font-family: 'Roboto Condensed', sans-serif; font-size: 1.1em;">Made by Kurzdor</div>
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed --->
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="js/jquery.vide.js"></script>
 </body>
 </html>
