--- a/project/2/index.html
+++ b/project/2/index.html
@@ -5,6 +5,7 @@
 	<meta name="theme-color" content="#000000">
 	<title>auto.hu</title>
 	<link rel="icon" href="../favicon.png">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
