--- a/project/nissan-gtr/index.html
+++ b/project/nissan-gtr/index.html
@@ -50,7 +50,7 @@
 	<!-- Navbar on small screens -->
 	<div id="navDemo" class="w3-bar-block w3-hide w3-hide-large w3-top" style="margin-top:50px; font-family: 'Titillium Web', sans-serif; background-color: rgba(255,255,255,0.1);">
 		<a href="#band" class="w3-bar-item w3-btn w3-padding-large">BAND</a>
-		<a href="#tour" class="w3-bar-item w3-btn w3-padding-large">TOUR</a>
+		<div id="movetosocial" class="w3-bar-item w3-btn w3-padding-large">SOCIAL</div>
 	</div>
 
 	<div id="top" class="w3-image w3-center">
@@ -107,7 +107,7 @@
 			</div>
 		</div>
 	</div>	 
-	<div class="w3-bar w3-card" style="font-family: 'Titillium Web', sans-serif;">
+	<div id="social" class="w3-bar w3-card" style="font-family: 'Titillium Web', sans-serif;">
 		<div class="w3-center">
 			<div class="content">
 				Powered by w3.css
@@ -157,6 +157,11 @@
        			 scrollTop: $("#top").offset().top
     		}, 3000);
 	});
+	$("#movetosocial").click(function() {
+    	$('html, body').animate({
+       		scrollTop: $("#social").offset().top
+    }, 3000);
+	})
 </script>
 </body>
 </html>
