--- a/project/nissan-gtr/index.html
+++ b/project/nissan-gtr/index.html
@@ -120,14 +120,14 @@
 		</div>
 	</div>
 	<!-- Social Modal --> 
-	<div id="social" class="w3-modal">
+	<!-- <div id="social" class="w3-modal">
   		<div class="w3-modal-content w3-animate-opacity">
     		<div class="w3-container">
       			<p class="w3-xxxlarge w3-center" style="font-family: 'Titillium Web', sans-serif; padding-top: 35%">Thanks for helping us!</div>
       			<div style="padding-bottom: 32%"></div>
     		</div>
   		</div>
-	</div>
+	</div> -->
 	<script>
 	function myFunction() {
 	    var x = document.getElementById("navDemo");
