--- a/project/nissan-gtr/index.html
+++ b/project/nissan-gtr/index.html
@@ -61,6 +61,7 @@
 	</div>
 	<div id="mover" class="w3-center"><img src="../img/Arrow-down.svg" alt="" style="width: 3%; height: 3%;margin-bottom: 3%"></div>
 	<div id="main"></div>
+	<!-- Row start -->
 	<div class="w3-row" style="margin-top: 5%;">
 		<div class="w3-col l1" style="visibility: hidden;">
 			_
@@ -73,7 +74,7 @@
 			<div class="auto w3-image w3-center">
 				<img src="../img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
-			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
+		<!-- 	<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
 					<b>At last year’s New York Auto Show, Nissan unveiled the most significant facelift of the R35 to date.</b>
 					<br/>
 					With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
@@ -104,9 +105,10 @@
 			</div>
 			<div class="w3-bar-item w3-large" style="margin-left: 5%; margin-bottom: 3%; font-family: 'PT Sans', sans-serif;">
 				<i style="padding-right: 2%" class="fa fa-user-circle" aria-hidden="true"></i>Kurzdor | <i style="padding-right: 1%" class="fa fa-calendar-o" aria-hidden="true"></i>14/04/2017	
-			</div>
+			</div> -->
 		</div>
-	</div>	 
+	</div>	
+	<!-- Row end --> 
 	<div class="w3-bar w3-card" style="font-family: 'Titillium Web', sans-serif;">
 		<div class="w3-center">
 			<div class="content">
@@ -120,14 +122,14 @@
 		</div>
 	</div>
 	<!-- Social Modal --> 
-	<!-- <div id="social" class="w3-modal">
+	<div id="social" class="w3-modal">
   		<div class="w3-modal-content w3-animate-opacity">
     		<div class="w3-container">
       			<p class="w3-xxxlarge w3-center" style="font-family: 'Titillium Web', sans-serif; padding-top: 35%">Thanks for helping us!</div>
       			<div style="padding-bottom: 32%"></div>
     		</div>
   		</div>
-	</div> -->
+	</div>
 	<script>
 	function myFunction() {
 	    var x = document.getElementById("navDemo");
