--- a/project/nissan-gtr/index.html
+++ b/project/nissan-gtr/index.html
@@ -74,7 +74,7 @@
 			<div class="auto w3-image w3-center">
 				<img src="../img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
-		<!-- 	<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
+			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
 					<b>At last year’s New York Auto Show, Nissan unveiled the most significant facelift of the R35 to date.</b>
 					<br/>
 					With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
@@ -97,7 +97,7 @@
 			<div class="w3-large" style="margin-left: 5%; font-family: 'PT Sans', sans-serif;">	
 				Share this page:		
 			</div>
-			<div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 0.5%">
+			<!-- <div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 0.5%">
 			<div class="items__" style="font-family: font-family: 'Titillium Web',sans-serif;"></div>
 				<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-vk"></i></button>
 				<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-facebook"></i></button>
