--- a/project/nissan-gtr/index.html
+++ b/project/nissan-gtr/index.html
@@ -97,15 +97,15 @@
 			<div class="w3-large" style="margin-left: 5%; font-family: 'PT Sans', sans-serif;">	
 				Share this page:		
 			</div>
-			<!-- <div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 0.5%">
-			<div class="items__" style="font-family: font-family: 'Titillium Web',sans-serif;"></div>
+			<div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 0.5%">
+		<!-- 	<div class="items__" style="font-family: font-family: 'Titillium Web',sans-serif;"></div>
 				<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-vk"></i></button>
 				<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-facebook"></i></button>
 				<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-google-plus"></i></button>
-			</div>
+			</div> -->
 			<div class="w3-bar-item w3-large" style="margin-left: 5%; margin-bottom: 3%; font-family: 'PT Sans', sans-serif;">
 				<i style="padding-right: 2%" class="fa fa-user-circle" aria-hidden="true"></i>Kurzdor | <i style="padding-right: 1%" class="fa fa-calendar-o" aria-hidden="true"></i>14/04/2017	
-			</div> -->
+			</div>
 		</div>
 	</div>	
 	<!-- Row end --> 
