--- a/project/nissan-gtr/index.html
+++ b/project/nissan-gtr/index.html
@@ -5,7 +5,7 @@
 	<meta name="theme-color" content="#f0f0f0">
 	<title>auto.hu</title>
 	<link rel="icon" href="../favicon.png">
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>	
 	<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -105,7 +105,8 @@
 				</div>
 			</div>	
 			<div class="w3-left w3-large" style="margin-left: 5%; margin-bottom: 3%; font-family: 'PT Sans', sans-serif;">
-				<i style="padding-right: 2%" class="fa fa-user-circle" aria-hidden="true"></i>Kurzdor | <i style="padding-right: 1%" class="fa fa-calendar-o" aria-hidden="true"></i>14/04/2017	
+				<div class="item1"><i style="padding-right: 2%" class="fa fa-user-circle" aria-hidden="true"></i>Kurzdor</div>
+				<div class="item2"><i class="fa fa-calendar-o" aria-hidden="true"></i>14/04/2017</div>
 			</div>
 		</div>
 	</div>	
