--- a/project/nissan-gtr/index.html
+++ b/project/nissan-gtr/index.html
@@ -104,7 +104,7 @@
 					<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-google-plus"></i></button>
 				</div>
 			</div>	
-			<div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 3%; font-family: 'PT Sans', sans-serif">
+			<div class="w3-bar w3-large" style="padding-left: 5%; padding-bottom: 3%; font-family: 'PT Sans', sans-serif">
 				<div class="w3-bar-item"><i class="fa fa-user-circle" aria-hidden="true"></i>Kurzdor</div>
 				<div class="w3-bar-item"><i class="fa fa-calendar-o" aria-hidden="true"></i>14/04/2017</div>
 			</div>
