--- a/project/nissan-gtr/index.html
+++ b/project/nissan-gtr/index.html
@@ -97,7 +97,7 @@
 			<div class="w3-large" style="margin-left: 5%; font-family: 'PT Sans', sans-serif;">	
 				Share this page:		
 			</div>
-			<div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 0.5%">
+			<div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 0.5%; width: 50%">
 				<div class="items__">
 					<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-vk"></i></button>
 					<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-facebook"></i></button>
