--- a/project/nissan-gtr/index.html
+++ b/project/nissan-gtr/index.html
@@ -97,13 +97,17 @@
 			<div class="w3-large" style="margin-left: 5%; font-family: 'PT Sans', sans-serif;">	
 				Share this page:		
 			</div>
-			<div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 0.5%; width: 50%">
+			<div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 0.5%; width: 40%">
 				<div class="items__">
 					<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-vk"></i></button>
 					<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-facebook"></i></button>
 					<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-google-plus"></i></button>
 				</div>
 			</div>	
+			<div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 3%; font-family: 'PT Sans', sans-serif; width: 40%">
+				<div class="w3-bar-item"><i class="fa fa-user-circle" aria-hidden="true"></i>Kurzdor</div>
+				<div class="w3-bar-item"><i class="fa fa-calendar-o" aria-hidden="true"></i>14/04/2017</div>
+			</div>
 		</div>
 	</div>	
 	<!-- Row end --> 
