--- a/project/audi-q/index.html
+++ b/project/audi-q/index.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="theme-color" content="#f0f0f0">
-	<title>This special edition Corvette has much carbon - auto.hu</title>
-	<link rel="icon" href="favicon.png">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<title>auto.hu</title>
+	<link rel="icon" href="../favicon.png">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>	
 	<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="../font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 	<!-- Navbar on large screens -->
@@ -42,105 +42,79 @@
 	</div>
 
 	<div id="top" class="w3-image w3-center">
-		<img src="img/PNGPIX-COM-Techart-Porsche-Cayenne-White-Car-PNG-Image.png" alt="" style="margin-top: 5%; width: 70%; height: 70%">
+		<img src="../img/PNGPIX-COM-Techart-Porsche-Cayenne-White-Car-PNG-Image.png" alt="" style="margin-top: 5%; width: 70%; height: 70%">
 	</div>
 	<div class="w3-jumbo w3-center" style="font-family: 'Titillium Web', sans-serif; text-shadow:1px 2px 0 #3d3d3d">
 		BLOG ABOUT CARS
 	</div>
-	<div class="w3-center"><img src="img/Arrow-down.svg" alt="" style="width: 3%; height: 3%;margin-bottom: 3%"></div>
+	<div id="mover" class="w3-center"><img src="../img/Arrow-down.svg" alt="" style="width: 3%; height: 3%;margin-bottom: 3%"></div>
 	<div id="main"></div>
+	<!-- Row start -->
 	<div class="w3-row" style="margin-top: 5%;">
 		<div class="w3-col l1" style="visibility: hidden;">
 			_
 		</div>
 		<div class="w3-col l7 w3-card w3-xxlarge">
 			<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web',sans-serif;">
-			This special edition Corvette has much carbon
+				Hold onto your trendy hats, more Audi Q SUVs are coming
 			</div>
 			<hr/>
 			<div class="auto w3-image w3-center">
-				<img src="img/corvette_2017.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/q8_sport_concept_3.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>
+			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
+				<b>We joke often of Audi’s ability to fill a niche.</b>
+				<br/>
+				Or, indeed, create a new one all of its own.
+				Well, its spotted some numbers yet to be prefixed by a Q and, well, prefixed away. So there’ll be a large Q8 SUV next year, and a smaller Q4 in 2019.
+				We’ve long suspected both will exist, mind, and the Q8 has been previewed recently by this very fetching concept car (pictured above). Yep, the slightly safe Audi styling of old is being binned for something far bolder. Hurrah!
+				Described as a “premium SUV in a coupe style”, the Q8 will roll off the same Bratislava production line as the really quite good SQ7. We suspect an SQ8 might be a guilty pleasure of the highest order.
+			</div>
+			<div class="auto w3-image w3-center">
+				<img src="../img/audi-q8/q8_sport_concept_2.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>
+			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
+				The Q4, meanwhile, will be built in Győr (it’s in Hungary), with production beginning a year after the Q8. Audi says the Q4 “will be positioned between the Audi Q3 and Q5” – much like the number four is positioned between three and five – and will no doubt be a bit curvier than either.
+			</div>
+			<div class="auto w3-image w3-center">
+				<img src="../img/audi-q8/a170086_large.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>					
+			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
+				Perhaps it’ll look like a shrunken Q8, though we got a glimpse of a small coupe-like Audi SUV a few years ago, via the slightly surprising TT offroad concept.
+			</div>
+			<div class="auto w3-image w3-center">
+				<img src="../img/audi-q8/a170087_large.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 3%; font-family: 'PT Sans', sans-serif;">
-				<b>It's 65 years of the Corvette. Time for a quick history lesson</b>
-				<br/>
-				65 years old you say?
-				Yep. The Corvette is 65 years old, which means it’s about time Chevrolet gave us another special edition. So it’s called the Corvette Carbon 65, erm, Edition, and as its name would have you believe, it does indeed feature much carbon.
-				The “ground effects” are the most obvious bits – the spoiler, diffuser, side skirts and so-on. The $15,000 option package, which comes out this summer and can be specified on Grandsports and Z06s, also features a carbon roof (on Coupes), carbon steering-wheel and gloss carbon interior trim.
-				Non-carbon additions include special seats, special graphics, “Ceramic Matrix Gray” (or “grey”, if you’re a Brit and therefore spell things correctly) paintwork and blue brake calipers. No performance enhancements, but take it from us – the Z06 especially is fast enough as it is.
-				But what about its predecessors? Have a flick through our little gallery for a quick, Corvette-based history lesson…
-			</div>	
-			<div class="auto w3-image w3-center">
-				<img src="img/corvette/chevrolet-corvette-1954.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				So, many more Audi SUVs are coming. Those with a keen eye on Q-badged cars will spot that only leaves the Q1 and Q6 as missed niche-filling opportunities. What chance we’ll be able to buy both in five years’ time?
 			</div>
-			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
-				<b>C1 – 1953-1962</b>
-				<br/>
-				The first Corvettes rolled off the production line in 1953. Production was limited to 300 cars that year, and all were finished in this red/white colour scheme. The engine was a six-cylinder with around 150bhp, and the transmission a two-speed ‘Powerglide’. By 1955 you could spec a three-speed manual and small-block V8. 
-			</div>
-			<div class="auto w3-image w3-center">
-				<img src="img/corvette/chevrolet-corvette-1966.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
-			</div>	
-			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
-				<b>C2 – 1963-1967</b>
-				<br/>
-				The “Sting Ray” (yes, two words). Possibly our favourite shape of Corvette. Physically smaller than the car it replaced and possessing of independent rear suspension, the C2 was the first Corvette to be available with a race-ready Z06 option that added stronger shocks and springs, bigger anti-roll bars, power assisted front brakes and for a time, a vast 36-gallon endurance-spec fuel tank.
-			</div>
-			<div class="auto w3-image w3-center">
-				<img src="img/corvette/chevrolet-corvette-1972.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
-			</div>
-			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 2%; font-family: 'PT Sans', sans-serif;">	
-				<b>C3 – 1968-1982</b>
-				<br/>
-				Where it all went a bit pear-shaped. C3 ‘Vette looked the part early-on, but emissions regulations meant a lot of them weren’t especially fast. Sold well though.
-			</div>
-			<div class="auto w3-image w3-center">
-				<img src="img/corvette/chevrolet-corvette-1987.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
-			</div>
-			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 2%; font-family: 'PT Sans', sans-serif;">	
-				<b>C4 – 1984-1996</b>
-				<br/>
-				The first complete redesign since 1963, and thus a much more modern car than the C3. Early cars had a little over 200bhp, but by 1990 power was up to 375bhp in the ZR1, which had a 5.7-litre V8 jointly designed by GM and Lotus. 
-			</div>
-			<div class="auto w3-image w3-center">
-				<img src="img/corvette/chevrolet-corvette-2001.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
-			</div>
-			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 2%; font-family: 'PT Sans', sans-serif;">	
-				<b>C5 – 1997-2004</b>
-				<br/>
-				Another all-new Corvette. C5 also marked the return of the Z06 - it was lighter than the standard car, had uprated suspension, revised gear ratios and a titanium exhaust. Chevrolet claimed the C5 Z06 could lap the ‘Ring in under eight minutes. This is fast even by today’s standards. 
-			</div>
-			<div class="auto w3-image w3-center">
-				<img src="img/corvette/chevrolet-corvette-2013.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
-			</div>
-			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 2%; font-family: 'PT Sans', sans-serif;">	
-				<b>C6 – 2005-2013</b>
-				<br/>
-				The first Corvette without concealed headlights since 1962 was effectively a refined C5. It was shorter but had a longer wheelbase, more powerful, more efficient engines and a nicer interior. Its modifications too extensive to list, the Z06 could hit 60mph in less than four seconds, and top 200mph.			
-				</div>
-			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">	
+			<div class="w3-large" style="margin-left: 5%; font-family: 'PT Sans', sans-serif;">	
 				Share this page:		
 			</div>
-			<div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 0.5%">
-			<div class="items__" style="font-family: font-family: 'Titillium Web',sans-serif;"></div>
-				<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-vk"></i></button>
-				<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-facebook"></i></button>
-				<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-google-plus"></i></button>
-				<div class="w3-bar-item w3-large w3-right" style="margin-left: 5%; margin-right: 5%; margin-bottom: 1.5%; font-family: 'PT Sans', sans-serif;">	
-				<i style="padding-right: 2%" class="fa fa-user-circle" aria-hidden="true"></i>Kurzdor | <i style="padding-right: 1%" class="fa fa-calendar-o" aria-hidden="true"></i>14/04/2017	
+			<div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 0.5%; width: 40%">
+				<div class="items__">
+					<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-vk"></i></button>
+					<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-facebook"></i></button>
+					<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-google-plus"></i></button>
+				</div>
+			</div>	
+			<div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 3%; font-family: 'PT Sans', sans-serif; width: 40%">
+				<div class="w3-bar-item"><i class="fa fa-user-circle" aria-hidden="true"></i>Kurzdor</div>
+				<div class="w3-bar-item"><i class="fa fa-calendar-o" aria-hidden="true"></i>14/04/2017</div>
 			</div>
-			</div>
-		</div> 
+		</div>
+	</div>	
+	<!-- Row end --> 
 	<div class="w3-bar w3-card" style="font-family: 'Titillium Web', sans-serif;">
 		<div class="w3-center">
-		<div class="content">
-			Powered by w3.css
-			<div id="up" class="w3-right"><i style="font-size: 2.5em" class="fa fa-angle-up" aria-hidden="true"></i></div>
-			<br/>
-			<a href="https://vk.com/Kurzdor"><i class="fa fa-vk" aria-hidden="true"></a></i>
-			<a href="https://vk.com/Kurzdor"><i class="fa fa-facebook" aria-hidden="true"></a></i>
-			<a href="https://vk.com/Kurzdor"><i class="fa fa-google-plus" aria-hidden="true"></a></i>
-		</div>
+			<div class="content">
+				Powered by w3.css
+				<div id="up" class="w3-right"><i style="font-size: 2.5em" class="fa fa-angle-up" aria-hidden="true"></i></div>
+				<br/>
+				<a href="https://vk.com/Kurzdor"><i class="fa fa-vk" aria-hidden="true"></a></i>
+				<a href="https://vk.com/Kurzdor"><i class="fa fa-facebook" aria-hidden="true"></a></i>
+				<a href="https://vk.com/Kurzdor"><i class="fa fa-google-plus" aria-hidden="true"></a></i>	
+			</div>
 		</div>
 	</div>
 	<!-- Social Modal --> 
@@ -148,7 +122,6 @@
   		<div class="w3-modal-content w3-animate-opacity">
     		<div class="w3-container">
       			<p class="w3-xxxlarge w3-center" style="font-family: 'Titillium Web', sans-serif; padding-top: 35%">Thanks for helping us!</div>
-      			<button onclick="document.getElementById('social').style.display='none'" class="w3-button w3-black w3-display-bottommiddle">Exit</button>
       			<div style="padding-bottom: 32%"></div>
     		</div>
   		</div>
@@ -162,6 +135,16 @@
 	        x.className = x.className.replace(" w3-show", "");
 	    }
 	}
+
+	// When the user clicks anywhere outside of the modal, close it
+	var modal = document.getElementById('social');
+	window.onclick = function(event) {
+	  if (event.target == modal) {
+	    modal.style.display = "none";
+	  }
+	}
+</script>
+<script>
 	$("#mover").click(function() {
     		$('html, body').animate({
         			scrollTop: $("#main").offset().top
@@ -172,6 +155,6 @@
        			 scrollTop: $("#top").offset().top
     		}, 3000);
 	});
-	</script>
+</script>
 </body>
 </html>
